# minecraft-essentials

./: .env.example  .env.vault  .gitignore  Cargo.toml  HEADER  LICENSE  README.md  contributing.md  flake.nix  renovate.json  response.json
.github/: dependabot.yml  labeler.yml  pr_template.md
.github/doc/: tauri.md
.github/workflows/: check.yml  ci.yml  daily.yml  deploy-cli.yml  deploy-crate.yml  labeler.yml  pr.yml  test.yml  weekly.yml
crates/core/: Cargo.toml  binstall.yml
crates/core/src/: errors.rs  lib.rs
crates/javascript/: Cargo.toml
crates/python/: Cargo.toml
crates/tauri-plugin/: Cargo.toml
src/: async_trait_alias.rs  cli.rs  code.rs  errors.rs  lib.rs  main.rs  mojang.rs  oauth.rs  pkce.rs  server.rs  structs.rs  tests.rs  token.rs  trait_alias.rs  xbox.rs
src/auth/: microsoft.rs  mod.rs  xbox.rs
src/custom/: mod.rs  mojang.rs  oauth.rs
src/launch/: java.rs  minecraft.rs  mod.rs
src/launch/structs/: dry.rs  mod.rs
src/minecraft/: crypto.rs  hashes.rs  mod.rs
src/modrinth/: mod.rs  projects.rs
src/structs/: dry.rs  mod.rs
templates/: LICENSE  README.md
